# experiments

open_cv_face_detect/: CMakeLists.txt  ObjectDetection.cpp  README.md  build.sh  run
